# Kudu

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  react.html  tsconfig.json  tsconfig.react.json  vite.config.ts  vitest.config.ts
docs/: postgresql-feature-roadmap.md  vue-to-react-migration-plan.md
src/: App.tsx  App.vue  main.ts  main.tsx  style.css
src-react/: App.tsx
src-react/hooks/: useConnectionHealthMonitor.ts  useContextMenu.ts  useMonacoEditor.ts  useSidebarResize.ts  useSqlExecution.tsx  useSqlHistory.ts  useWorkspaceSessionLifecycle.ts  useWorkspaceTabContextMenu.ts
src-react/i18n/: index.ts
src-react/stores/: appStore.ts  cellViewerRegistry.ts  workspaceSession.ts
src-react/styles/: global.css
src-react/ui/: antd.ts
src-react/utils/: redisCommand.test.ts
src-react/views/: HomeView.module.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.react.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: connection.rs  fonts.rs  metadata.rs  mod.rs  query.rs  utils.rs  workspace.rs
src-tauri/src/database/: gaussdb.rs  manager.rs  mod.rs  mongodb.rs  mysql.rs  opengauss.rs  postgresql.rs  redis.rs  sqlite.rs  traits.rs
src-tauri/src/models/: app_info.rs  mod.rs
src-tauri/src/utils/: crypto.rs  sql_formatter.rs  sql_sanitize.rs  sql_script.rs
src/api/: connection.ts  fileManager.ts  metadata.ts  query.ts  utils.ts  workspace.ts
src/composables/: useConnectionHealthMonitor.ts  useMonacoEditor.ts  useSidebarResize.ts  useSqlDocumentActions.ts  useSqlExecution.ts  useSqlHistory.ts  useTabManager.ts  useWindowControls.ts  useWorkspaceClipboardRouting.ts  useWorkspaceCloseGuards.ts  useWorkspacePageLifecycle.ts  useWorkspaceSessionLifecycle.ts  useWorkspaceTabActions.ts  useWorkspaceTabContextMenu.ts  useWorkspaceTabMenuActions.ts  useWorkspaceViewActions.ts
src/hooks/: useMonacoEditor.ts  useTabManager.ts  useThemeVariables.ts  useWindowControls.ts  useWorkspaceClipboardRouting.ts  useWorkspaceCloseGuards.tsx
src/locales/: en-US.json  zh-CN.json
src/plugins/: vxe.ts
src/router/: index.ts
src/services/: redisAutocomplete.ts  sqlAutocomplete.ts
src/stores/: app.ts  (+7 more)
(+151 files in other folders)
