[package]
name = "kudu"
version = "0.1.0"
description = "Kudu - 轻量级桌面数据库客户端"
authors = ["Kudu Contributors"]
license = "GPL-3.0"
repository = ""
edition = "2021"

# 构建优化
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"  # 优化大小
strip = true

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = ["protocol-asset"] }
tauri-plugin-store = "2.4.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
thiserror = "2.0.17"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# 原生数据库驱动
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tokio-opengauss = { version = "0.1", features = ["with-chrono-0_4", "with-serde_json-1"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid", "serde_json"], optional = true }
mysql_async = { version = "0.36", features = ["default"], optional = true }
mongodb = { version = "3.4.1", optional = true }
redis = { version = "1.0.2", features = ["tokio-comp"], optional = true }

native-tls = "0.2"
postgres-native-tls = "0.5"
futures = "0.3"

# 安全存储
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"

# SQL 解析
sqlformat = "0.2"

# 系统字体读取
font-kit = "0.14"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
base64 = "0.22"
hostname = "0.4.2"
libc = "0.2"
tauri-plugin-clipboard-manager = "2.3.2"

[features]
default = ["mysql", "postgresql", "opengauss", "sqlite", "mongodb-support", "redis-support"]
mysql = ["dep:mysql_async"]
postgresql = []
opengauss = []
sqlite = ["dep:rusqlite"]
mongodb-support = ["mongodb"]
redis-support = ["redis"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel"] }
